force-app/main/default/objects/RW_MS_Teams__c/RW_MS_Teams__c.object-meta.xml
<CustomObject>
    <label>MS Teams</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>