force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Presales Call</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>