force-app/main/default/objects/RW_MS_Teams__c/fields/RW_End_Time__c.field-meta.xml
<CustomField>
    <fullName>RW_End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>