force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MS Teams</relationshipLabel>
    <relationshipName>MS_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>