force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Meeting_Content__c.field-meta.xml
<CustomField>
    <fullName>RW_Meeting_Content__c</fullName>
    <label>Meeting Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>