force-app/main/default/objects/RW_MS_Teams__c/fields/RW_MeetingID__c.field-meta.xml
<CustomField>
    <fullName>RW_MeetingID__c</fullName>
    <label>MeetingID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>