force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>