force-app/main/default/objects/RW_MS_Teams__c/fields/RW_OnlineMeeting_JoinUrl__c.field-meta.xml
<CustomField>
    <fullName>RW_OnlineMeeting_JoinUrl__c</fullName>
    <label>OnlineMeeting JoinUrl</label>
    <type>Url</type>
</CustomField>