force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MS Teams</relationshipLabel>
    <relationshipName>MS_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>