force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>RW_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>