force-app/main/default/objects/RW_MS_Teams__c/fields/RW_Title__c.field-meta.xml
<CustomField>
    <fullName>RW_Title__c</fullName>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>