force-app/main/default/objects/RW_MS_Teams__c/fields/RW_URL_Recording__c.field-meta.xml
<CustomField>
    <fullName>RW_URL_Recording__c</fullName>
    <label>URL Recording</label>
    <type>Url</type>
</CustomField>